Issue #3298625 by agami4: Add z-index to the hero region

--- a/modules/social_features/social_follow_taxonomy/assets/css/social_follow_taxonomy.scss
+++ b/modules/social_features/social_follow_taxonomy/assets/css/social_follow_taxonomy.scss
@@ -2,6 +2,10 @@
   z-index: 5;
 }
 
+.region--hero {
+  z-index: 1;
+}
+
 .flag-follow-term {
   position: relative;
   display: inline-block;
